# poprako-b

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.bak.yml  docker-compose.host.yml  docker-compose.yml
assets/: 12oclock.txt
chatbox_static/: app.js  index.html  style.css
docs/: agent-persistence.md  swagger.json  todo.md  花名册25-12-06.txt
docs/api-format/: deepseek.md
docs/prepare/: 01-login-page.md  02-workspace-page.md  03-comic-playground-page.md  04-member-list-page.md  05-system-mail-page.md  06-settings-page.md  07-translator-page.md  08-error-page.md  poprako-w-pages-index.md
memory/prompts/: directory.txt  examples.txt  injected-context.txt  input-format.txt  knowledge-tools.txt  knowledge.txt  persona.txt  response-style.txt  rules.txt  safety.txt  scenario.txt  scene.txt  system.yaml
migrations/: 20260603135659_create-session-table.up.sql  20260603135703_create-checkpoint-table.down.sql  20260603135703_create-checkpoint-table.up.sql  20260604130000_create-agent-messages.down.sql  20260604130000_create-agent-messages.up.sql  20260604130100_create-agent-sessions.down.sql  20260604130100_create-agent-sessions.up.sql  20260604130200_create-agent-checkpoints.down.sql  20260604130200_create-agent-checkpoints.up.sql  20260604130300_create-agent-checkpoint-messages.down.sql  20260604130300_create-agent-checkpoint-messages.up.sql
src/: ai.rs  bot.rs  chatbox.rs  graph.rs  http.rs  lib.rs  main.rs
src/ai/: agent.rs  message.rs  resolver.rs  session.rs
src/bot/: agent.rs  app.rs  event.rs  handler.rs  keepalive.rs  message.rs  policy.rs  router.rs  scheduled_task.rs  server.rs  state.rs  value_object.rs
(+113 files in other folders)
