[package]
name = "poprako-b-preview"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
openai-oxide = "0.14.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
url = "2.5.8"
