[package]
name = "poprako-b-preview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.7"
dotenvy = "0.15.7"
onebot_v11 = "0.1.5"
openai-oxide = "0.14.0"
reqwest = { version = "0.13.3", features = ["json"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["local-offset"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
cron = "0.15"
rand = "0.8.5"
url = { version = "2.5.8", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync"] }
